--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -1,12 +1,12 @@
 # This workflow uses ServiceNow custom actions that are certified by ServiceNow.
 
-name: CICD GitHub workflow - JWT authentication
-on: workflow_dispatch
+name: CICD GitHub workflow - JWT Authentication
+on:   workflow_dispatch
   # push:
   #   branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
-  #   types: [opened, synchronize, reopened]
+ # pull_request: 
+ #    branches: [ "main" ]
+ #    types: [opened, synchronize, reopened]
 
 # on:
 #   schedule:
@@ -35,14 +35,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4.0.0
         
     - name: Run Tests with Maven
       run: mvn -B test --file pom.xml
 
     - name: ServiceNow DevOps Unit Test Results
     # You may pin to the exact commit or the version.
-      uses: ServiceNow/servicenow-devops-test-report@dev
+      uses: ServiceNow/servicenow-devops-test-report@v6.0.0
       with:
           # Devops Integration Token
           # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
@@ -54,12 +54,12 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           # Job Name
           job-name: 'Test' # Should be same name as declared in 'name' clause of the current Stage
-          test-summary-name: 'Mona Test Summary'
           # Github Context
           context-github: ${{ toJSON(github) }}
           # JUnit xml report file name with path
-          xml-report-filename: target/ # if only JUnit tests, use target/surefire-reports/testng-results.xml
-                                                                          # if both JUnit & TestNG tests, use target/surefire-reports/testng-junit-results/testng-results.xml
+          xml-report-filename: target/surefire-reports/testng-results.xml  
+           # if only JUnit tests,target/  use target/surefire-reports/testng-results.xml
+            # if both JUnit & TestNG tests, use target/surefire-reports/testng-junit-results/testng-results.xml
 
   registerArtifact:
     name: 'Register Artifact'
@@ -68,7 +68,7 @@ jobs:
     steps:
     - name: ServiceNow DevOps Register Artifact
     # You may pin to the exact commit or the version.          
-      uses: ServiceNow/servicenow-devops-register-artifact@dev
+      uses: ServiceNow/servicenow-devops-register-artifact@v5.1.0
       with:
           devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
           devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
@@ -92,34 +92,34 @@ jobs:
               }
           ]'
 
-  # sonarScan:
-  #  name: 'Sonar Scan'
-  #  needs: registerArtifact
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #  - name: Checkout
-  #    uses: actions/checkout@v4.0.0
+  sonarScan:
+   name: 'Sonar Scan'
+   needs: registerArtifact
+   runs-on: ubuntu-latest
+   steps:
+   - name: Checkout
+     uses: actions/checkout@v4.0.0
   
-  #  - name: ServiceNow DevOps Sonar Scan Results
-  #  # You may pin to the exact commit or the version.     
-  #    uses: ServiceNow/servicenow-devops-sonar@dev
-  #    with:
-  #        # ServiceNow Instance URL
-  #        instance-url: ${{ secrets.SN_INSTANCE_URL }}
-  #        # Devops Integration Token
-  #        devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
-  #        devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
-  #        # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-  #        # Orchestration Tool Id
-  #        tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-  #        # Github Context
-  #        context-github: ${{ toJSON(github) }}
-  #        # Display Name of the Job
-  #        job-name: 'Sonar Scan'
-  #        # Sonar Host URL
-  #        sonar-host-url: ${{ secrets.SONAR_URL }}
-  #        # Sonar Project Key
-  #        sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+   - name: ServiceNow DevOps Sonar Scan Results
+   # You may pin to the exact commit or the version.     
+     uses: ServiceNow/servicenow-devops-sonar@v5.1.0
+     with:
+         # ServiceNow Instance URL
+         instance-url: ${{ secrets.SN_INSTANCE_URL }}
+         # Devops Integration Token
+         devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+         devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+         # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+         # Orchestration Tool Id
+         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+         # Github Context
+         context-github: ${{ toJSON(github) }}
+         # Display Name of the Job
+         job-name: 'Sonar Scan'
+         # Sonar Host URL
+         sonar-host-url: ${{ secrets.SONAR_URL }}
+         # Sonar Project Key
+         sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
 
   # ServiceNowSecurityScanResults:
   #   # type of machine to run the job on
@@ -128,12 +128,12 @@ jobs:
   #   needs: sonarScan
   #   steps:
   #     - name: ServiceNow DevOps Security Results
-  #       uses: ServiceNow/servicenow-devops-security-result@dev
+  #       uses: ServiceNow/servicenow-devops-security-result@v5.1.0
   #       with:
   #           # DevOps Integration Token of GitHub tool created in ServiceNow instance for token based authentication.
-  #           # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-  #           devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
-  #           devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+  #           devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+  #           # devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+  #           # devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
   #           # ServiceNow Instance URL
   #           instance-url: ${{ secrets.SN_INSTANCE_URL }}
   #           # Orchestration Tool Id
@@ -143,19 +143,19 @@ jobs:
   #           # Display Name of the Job
   #           job-name: 'ServiceNow Security Scan Results'
   #           security-result-attributes: '{"scanner": "Veracode", "applicationName": "10kflaws-72"}'
-  #           # scanner: Scanning tool and is required e.g. Veracode.
-  #           # applicationName: Name of your Veracode application and is required. This attribute is applicable only for Veracode.
-  #           # buildVersion: Veracode Scan name / build version and is optional. This attribute is applicable only for Veracode.
-  #           # securityToolId: Security tool onboarded in ServiceNow (sys_id of the onboarded security tool) and is optional.
+  #           scanner: Scanning tool and is required e.g. Veracode.
+  #           applicationName: Name of your Veracode application and is required. This attribute is applicable only for Veracode.
+  #           buildVersion: Veracode Scan name / build version and is optional. This attribute is applicable only for Veracode.
+  #           securityToolId: Security tool onboarded in ServiceNow (sys_id of the onboarded security tool) and is optional.
 
   registerPackage:
     name: 'Register Package'
-    needs: [registerArtifact]
+    needs: [sonarScan]
     runs-on: ubuntu-latest
     steps:
     - name: ServiceNow DevOps Register Package
     # You may pin to the exact commit or the version.           
-      uses: ServiceNow/servicenow-devops-register-package@dev
+      uses: ServiceNow/servicenow-devops-register-package@v5.1.0
       with:
           # Devops Integration Token
           devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
@@ -188,11 +188,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:     
       - name: ServiceNow DevOps Change Attributes
-        uses: ServiceNow/servicenow-devops-change@v5.1.0
+        uses: ServiceNow/servicenow-devops-change@v6.0.0
         with:
-          # devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-          # devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+          # devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
           instance-url: ${{ secrets.SN_INSTANCE_URL }}
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
@@ -201,21 +201,20 @@ jobs:
           interval: '100'
           timeout: '3600'
           changeCreationTimeOut: ;'1000'
-          deployment-gate: '{"environment":"prod","jobName":"Deploy"}'
-          # chg_model":"007c4001c343101035ae3f52c1d3aeb2"
+          deployment-gate: '{"environment":"PROD","jobName":"Deploy"}'
 
   deploy:
     name: 'Deploy'
     needs: change
     runs-on: ubuntu-latest
-    environment: prod
+    environment: PROD
     steps:
       - name: Run deployment scripts
         run: echo Completed Deployment. 
 
   getchange:
     # jobs that must complete successfully before this job will run
-    needs: deploy
+    needs: change
     # type of machine to run the job on
     runs-on: ubuntu-latest
     name: 'ServiceNow DevOps Get Change'
@@ -225,7 +224,7 @@ jobs:
       - name: ServiceNow DevOps Get Change
         # You may pin to the exact commit or the version.
         # uses: ServiceNow/servicenow-devops-get-change@0f8b1914adeaec764a4286bdd9cba73ed1c6097f
-        uses: ServiceNow/servicenow-devops-get-change@dev
+        uses: ServiceNow/servicenow-devops-get-change@v5.1.0
         id: get_change
         with:
           # ServiceNow Instance URL
@@ -239,7 +238,7 @@ jobs:
           # Github Context
           context-github: ${{ toJSON(github) }}
           # The inputs to identify change at Servicenow and GET it.
-          change-details: '{"build_number":"${{github.run_id}}","pipeline_name":"${{github.repository}}/${{github.workflow}}","stage_name":"ServiceNow DevOps Change"}'
+          change-details: '{"build_number":"${{github.run_id}}","pipeline_name":"${{github.repository}}/${{github.workflow}}","stage_name":"Deploy"}'
 
       - name: Output of ServiceNow DevOps Get Change
         run: echo 'Output of ServiceNow DevOps Get Change is -> change-request-number = ${{ steps.get_change.outputs.change-request-number }}' >> $GITHUB_OUTPUT
@@ -254,7 +253,7 @@ jobs:
       - name: ServiceNow DevOps Update Change
         # You may pin to the exact commit or the version.
         # uses: ServiceNow/servicenow-devops-update-change@66d51cb13684d8287a763bc3f4dc4531c6ab3306
-        uses: ServiceNow/servicenow-devops-update-change@dev
+        uses: ServiceNow/servicenow-devops-update-change@v5.1.0
         id: update_change
         with:
           # ServiceNow Instance URL
